RESOLVED FIXED121561
[MSE] Throw exception when setting timestampOffset while 'updating' state is set.
https://bugs.webkit.org/show_bug.cgi?id=121561
Summary [MSE] Throw exception when setting timestampOffset while 'updating' state is ...
Jer Noble
Reported 2013-09-18 10:50:38 PDT
[MSE] Throw exception when setting timestampOffset while 'updating' state is set.
Attachments
Patch (5.46 KB, patch)
2013-09-18 11:09 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2013-09-18 11:09:45 PDT
WebKit Commit Bot
Comment 2 2013-09-18 13:32:08 PDT
Comment on attachment 212005 [details] Patch Clearing flags on attachment: 212005 Committed r156058: <http://trac.webkit.org/changeset/156058>
WebKit Commit Bot
Comment 3 2013-09-18 13:32:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.