[MSE] Throw exception when setting timestampOffset while 'updating' state is set. https://bugs.webkit.org/show_bug.cgi?id=121561

Reviewed by Eric Carlson.

Source/WebCore:

Tests: Updated http/tests/media/media-source/mediasource-append-buffer.html.

Merge https://chromium.googlesource.com/chromium/blink/+/25285998be3d0edcd951d12d445a7375e50e512c
by Changbin Shao.

The Media Source Extensions spec requires that an exception be thrown if the 'updating' attribute
equals true while setting the timestampOffset of a SourceBuffer.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::setTimestampOffset):

LayoutTests:

* http/tests/media/media-source/mediasource-append-buffer-expected.txt:
* http/tests/media/media-source/mediasource-append-buffer.html:


Canonical link: https://commits.webkit.org/139573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156058 268f45cc-cd09-0410-ab3c-d52691b4dbfc